cmake_minimum_required(VERSION 3.21)
project(ArduinoComponents)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)

add_executable(ArduinoComponents
        include/AnalogReader.h
        include/BH1750Adapter.h
        include/BME280Adapter.h
        include/DHTAdapter.h
        include/DisplayHandler.h
        include/DisplayView.h
        include/DS18B20Adapter.h
        include/LightController.h
        include/LightControllerNet.h
        include/LightSensorInterface.h
        include/LightSensorNet.h
        include/MotionNet.h
        include/TempCtrl.h
        include/TempCtrlNet.h
        include/TempCtrlRelay.h
        include/TempCtrlRelayNet.h
        include/TempCtrlServo.h
        include/TempCtrlServoNet.h
        include/THInterface.h
        include/THNet.h
        include/THPInterface.h
        include/THPNet.h
        include/TInterface.h
        include/TNet.h
        include/TVirtual.h
        include/ValueInt.h
        include/ValueIntInterface.h
        include/ValueIntNet.h
        include/VccNet.h
        include/WashingMachine.h
        include/WashingMachineNet.h
        src/AnalogReader.cpp
        src/BH1750Adapter.cpp
        src/BME280Adapter.cpp
        src/DHTAdapter.cpp
        src/DisplayHandler.cpp
        src/DisplayView.cpp
        src/DS18B20Adapter.cpp
        src/LightController.cpp
        src/LightControllerNet.cpp
        src/LightSensorInterface.cpp
        src/LightSensorNet.cpp
        src/MotionNet.cpp
        src/TempCtrl.cpp
        src/TempCtrlNet.cpp
        src/TempCtrlRelay.cpp
        src/TempCtrlRelayNet.cpp
        src/TempCtrlServo.cpp
        src/TempCtrlServoNet.cpp
        src/THInterface.cpp
        src/THNet.cpp
        src/THPInterface.cpp
        src/THPNet.cpp
        src/TInterface.cpp
        src/TNet.cpp
        src/ValueIntInterface.cpp
        src/ValueIntNet.cpp
        src/VccNet.cpp
        src/WashingMachineNet.cpp)
